# cChardet

./: Pipfile  pyproject.toml  setup.py
.github/workflows/: build-and-upload-to-pypi.yml
src/tests/: bench.py  cchardet_test.py
